<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.kahwai.ezhasil.LoginActivity">

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/email_login_form"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="5"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="30dp"
            android:src="@drawable/ezhasil" />


        <AutoCompleteTextView
            android:id="@+id/email"
            android:layout_width="300dp"
            android:layout_height="52dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="30dp"
            android:background="@drawable/textbox_email"
            android:fontFamily="@font/gothic"
            android:hint="@string/prompt_email"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:paddingLeft="20dp"
            android:singleLine="true" />

        <EditText
            android:id="@+id/password"
            android:layout_width="300dp"
            android:layout_height="52dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="30dp"
            android:background="@drawable/textbox_email"
            android:fontFamily="@font/gothic"
            android:hint="@string/hint_password"
            android:imeActionId="6"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionUnspecified"
            android:inputType="textPassword"
            android:maxLines="1"
            android:paddingLeft="20dp"
            android:singleLine="true" />

        <Button
            android:id="@+id/email_sign_in_button"
            style="?android:textAppearanceSmall"
            android:layout_width="300dp"
            android:layout_height="52dp"
            android:layout_gravity="center_horizontal"
            android:background="@color/graybackground"
            android:fontFamily="@font/gothic_bold"
            android:text="@string/action_sign_in"
            android:layout_marginBottom="30dp"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/forgot_password_title2"
            android:layout_width="300dp"
            android:layout_height="52dp"
            android:fontFamily="@font/gothic"
            android:text="Forgot Password? Click Here"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:onClick="forgot_onClick"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center|bottom"
        android:orientation="vertical">


        <TextView
            android:id="@+id/copyright"
            android:layout_width="300dp"
            android:layout_height="52dp"
            android:textAlignment="center"
            android:fontFamily="@font/gothic"
            android:text="Copyrighted © 2017 - ezHasil"/>

    </LinearLayout>

</LinearLayout>
